--- a/style/style.css
+++ b/style/style.css
@@ -10,7 +10,19 @@ color: white;
 font-size: 25px;
 }
 
+#texto{
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    border: solid 2px white;
+    border-radius: 5px;
+    background-color: rgb(125, 15, 228);
+    padding: 10px;
+    font-size: 20px;
+}
+
 #menu{
+    margin-left: -12px;
+    margin-top: -5px;
     border: 2px solid black;
     font-size: 24px;
     color: white;
@@ -43,6 +55,6 @@ li a:hover{
     background-color: rgb(13, 108, 231);
     text-shadow: 1px 1px 3px black;
     border-radius: 10px;
-
+    text-transform: uppercase;
 }
 
