--- a/style/style.css
+++ b/style/style.css
@@ -23,10 +23,11 @@ font-size: 25px;
 #menu{
     margin-left: -12px;
     margin-top: -5px;
+    width: 120%;
     border: 2px solid black;
     font-size: 24px;
     color: white;
-    background-color: rgb(46, 35, 204);
+    background-image: linear-gradient( rgb(199, 12, 199) ,rgb(75, 4, 146));
     position: sticky;
 }
 
