--- a/style/style.css
+++ b/style/style.css
@@ -13,7 +13,7 @@ font-size: 25px;
 #texto{
     font-family: Arial, Helvetica, sans-serif;
     color: white;
-    border: solid 2px white;
+    border: solid 2px lightblue;
     border-radius: 5px;
     background-color: rgb(125, 15, 228);
     padding: 10px;
@@ -21,9 +21,9 @@ font-size: 25px;
 }
 
 #menu{
-    margin-left: -12px;
-    margin-top: -5px;
-    width: 120%;
+    margin-left: -10px;
+    margin-top: -10px;
+    width: 101.09%;
     border: 2px solid black;
     font-size: 24px;
     color: white;
@@ -59,3 +59,34 @@ li a:hover{
     text-transform: uppercase;
 }
 
+
+.image-hover {
+    width: 300px;
+    height: 150px; 
+    background-image: url('../img/baby.jpg');
+    background-size: cover; 
+    transition: background-image 0.5s ease-in-out; 
+    background-size: cover;
+    border: solid 2px lightblue;
+    border-radius: 5px;
+}
+
+.image-hover:hover {
+    background-image: url('../img/Ashbaby.jpg'); 
+    width: 300px;
+    height:200px ;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border: solid 2px lightblue;
+    border-radius: 5px;
+}
+
+#borderex{
+    color: black;
+    border: dotted 5px red;
+    border-radius: 3px;
+    width: 100px;
+    height: 100px;
+    padding: 10px;
+    background-image: linear-gradient(yellow, red, orange);
+}
